# pythoneers-kubernetes-workshop

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py
app/api/: supermarkt.py
app/routers/: admin_router.py  item_router.py
app/schemas/: item.py
app/static/: style.css
app/templates/: index.html
exercises/: completed_application.yaml  part-1.md  part-2.md
exercises/part-1/: README.md
exercises/part-2/: README.md  manifest-kind-ingress.yaml  manifest.yaml
exercises/part-3/: README.md  manifest.yaml
yaml/: app.yaml  mariaDB.yaml
